@@ -26,6 +26,7 @@ Core - General
   - Improve the CmsModuleInfo class such that if the module class file is newer it will be loaded.
   - Now generate the moduleinfo.ini file automatically on intall or upgrade of a module.
   - Increase the maxlength attribute for password input boxes in myaccount.
+  - Added new CMS_ADMIN_PATH define from the config class.
 
 CMSContentManager - remember to bump version
   - Gets rid of secure options, flag output and bulk functionaltiy
